version 1.0.3 (not yet released)
           * add streamplot method, along with streamplot_demo.py example.
           * add boundarylats, boundarylons Basemap attributes (arrays
             describing map boundaries - useful for illustrating map projection
             region on another map). Example illustrating usage
             (make_inset.py) added.
           * update coastlines, rivers, political boundaries to GSHHS
             2.2.0/GMT 4.5.7. The fillcontinents bug (filling the outside
	     instead of the inside of a coastline polygon) is now much
             harder to trigger.    
           * add 'round' keyword keyword to Basemap.__init__ for pole-centered
             projections to make them round (clipped at boundinglat) instead
             of square.        
	   * added hexbin method, along with hexbin_demo.py example.
	   * drawmapboundary now uses axes bgcolor as default fill_color. If
	     no color fill wanted, set fill_color='none' (a string).
	   * clip coastlines for nplaea,npaeqd,splaea,spaeqd in stereographic
	     coordinates to avoid S. America disappearing in some south polar
	     plots.
           * fix broken daynight terminator function.
           * added kav7 (Kavrayskiy VII) and eck4 (Eckert IV) projections
             (https://github.com/matplotlib/basemap/issues/9).
           * update pyproj source from pyproj.googlecode.com. Includes
             new more robust and accurate pure python code for geodesic computations
             from geographiclib.
           * bug fixes for celestial projections, and non-standard sphere
             radii (https://github.com/matplotlib/basemap/pull/6).
           * fix bug in drawparallels that results in 'KeyError' when drawing
             parallels very close together (0.1 degrees).
           * fix constant in Robinson projection (update PJ_robin.c
             from proj4 svn).
           * fix typo in setup.py (replace "!= ['sdist','clean']" with