@@ -1,4 +1,6 @@
 version 1.0.3 (not yet released)
+           * add k_0 keyword for projection = 'tmerc' so UTM zones can be
+             created.
            * add streamplot method, along with streamplot_demo.py example.
            * add boundarylats, boundarylons Basemap attributes (arrays
              describing map boundaries - useful for illustrating map projection
